# ChangeLog for app-editors/bluefish
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.67 2010/01/22 23:57:50 billie Exp $

*bluefish-2.0.0_rc1 (22 Jan 2010)

  22 Jan 2010; Daniel Pielmeier <billie@gentoo.org> -bluefish-1.3.7.ebuild,
  +bluefish-2.0.0_rc1.ebuild,
  +files/bluefish-2.0.0_rc1-gucharmap-automagic.patch:
  Version bump. Fixes Bug #298146. Thanks to Jesús Guerrero for reporting.
  Remove old.

*bluefish-1.3.8 (17 Nov 2009)

  17 Nov 2009; Daniel Pielmeier <billie@gentoo.org> +bluefish-1.3.8.ebuild,
  +files/bluefish-1.3.8-gucharmap-automagic.patch:
  Version bump. Added a dirty patch which fixes automagic installation of
  the charmap plugin.

*bluefish-1.3.7 (23 Sep 2009)

  23 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -bluefish-1.3.6.ebuild, +bluefish-1.3.7.ebuild:
  Version bump. Remove old. Per bug #285863.

  30 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  bluefish-1.3.6.ebuild:
  Fix copy/pasto dep problem. Per bug #283067.

*bluefish-1.3.6 (28 Aug 2009)

  28 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org> -bluefish-1.0.ebuild,
  -bluefish-1.1.6.ebuild, -bluefish-1.3.2.ebuild, +bluefish-1.3.6.ebuild:
  Version bump. Remove old. Per bug #262212 and #282893.

*bluefish-1.3.2 (22 Feb 2009)

  22 Feb 2009; Hanno Boeck <hanno@gentoo.org> +bluefish-1.3.2.ebuild:
  Version bump.

*bluefish-1.1.6 (26 Oct 2008)

  26 Oct 2008; Hanno Boeck <hanno@gentoo.org> +bluefish-1.1.6.ebuild:
  Version bump, ebuild by Rolandas Valteris in #242512.

  04 Apr 2008; Brent Baude <ranger@gentoo.org> bluefish-1.0.7.ebuild:
  stable ppc64, bug 214905

  03 Apr 2008; Kenneth Prugh <ken69267@gentoo.org> bluefish-1.0.7.ebuild:
  amd64 stable, bug #214905

  03 Apr 2008; Brent Baude <ranger@gentoo.org> bluefish-1.0.7.ebuild:
  stable ppc, bug 214905

  31 Mar 2008; Raúl Porcel <armin76@gentoo.org> bluefish-1.0.7.ebuild:
  alpha/ia64/sparc/x86 stable wrt #214905
