@@ -2,9 +2,11 @@ AUX bluefish-1.3.8-gucharmap-automagic.patch 1851 RMD160 d054e112b1c8f56e8a75954
 AUX bluefish-2.0.0_rc1-gucharmap-automagic.patch 1851 RMD160 f153df7601b246ac3713ba405edde9c777c008e5 SHA1 9e5bf17258fa02dc5ae4ba6a1e5bdbd75060dcb4 SHA256 8aef6c347b2f1a92badd7549447fe172f85f3f17292e7956583cc0dc2e12fcdb
 DIST bluefish-1.0.7.tar.bz2 1495619 RMD160 7ce8a7c8873cd0ef84dd6486551976593544a8dc SHA1 c61d6271c49e9fa8c728724e6aadde33a227bdea SHA256 68cb74b993ad31a86083e8eed482b2f5b4d523806538ea9bc42bfa8b4c0a1110
 DIST bluefish-2.0.0-rc1.tar.gz 4479387 RMD160 79885b3a987255001955b33f487757dfa2dc2fcf SHA1 a30bed03954590f74af7c121418addfb0af2c637 SHA256 9f249efd369a613909e7b35e924a8818966106bf84189e5d55f1a8c86d4ec57c
+DIST bluefish-2.0.0-rc2.tar.bz2 3286071 RMD160 6b87a1b68ce4310f52a27938ec1dd6f6bbd35f05 SHA1 91d271a7544f2e67c30f2acd00c2a2f60a918bb6 SHA256 88c9870789ab32109a3b8596737d2a3596b725ae39bab871c734fac39fe766cf
 DIST bluefish-unstable-1.3.8.tar.bz2 3054876 RMD160 c42ad8265ea1c2ab52cc60c3cb1c4007d842c191 SHA1 7d929ebe872e2475941304dc44076f0fbaf5f4eb SHA256 5378f42f5f43f400e04522f4f314a5a828bf190fdf34668faf974fe39c29ce68
 EBUILD bluefish-1.0.7.ebuild 1080 RMD160 0e179f1289cf5696c01bbf7d94b5969c4682faa2 SHA1 d76f1e627afdea06f5a9ad8106cfa1695d6d5a6d SHA256 de9198b983f79e77e065ad6375807b0c8858266a1264d916c5c117e2b109d3b7
 EBUILD bluefish-1.3.8.ebuild 2189 RMD160 c9d3ca0d2ed343349bcfa29a83abf49d1d6ffe99 SHA1 0f8a4dc180e62301516f381d114f5f3db3199bf9 SHA256 fc30931e3828bf0d8a6e71f1d97327b884b689660cbca48476acbaf0cd5e711c
 EBUILD bluefish-2.0.0_rc1.ebuild 2154 RMD160 ec76e1f0a236dafb63d23561989f7c059ab027bc SHA1 eb9a3863d3e1c9c766cb618b8403a44645f92f17 SHA256 b12173ea0bfe135d7b39e0f05a1f38ff26f25e9a0aca48acde549da1990457d4
-MISC ChangeLog 8566 RMD160 dd2218cf6aafd64140470591465103fd8a13dcd1 SHA1 5684a596d132ceda6cb299bb84d7ac41e4dd6a92 SHA256 5137fffb55dcca3d7b5f621f00166c42fdc4d24e6ca55a2944683e43215eafe9
-MISC metadata.xml 217 RMD160 3b01d5dab901ee93217f72b711954d3cccbb1717 SHA1 e304788b60dd2cf214d360a21d267e8635474d98 SHA256 2f5dfc1eb79d2d9ee02663da6e1449f499c3a37b7f4cc2391e18d7789a314669
+EBUILD bluefish-2.0.0_rc2.ebuild 2226 RMD160 f05c8b85c9aa9a87323ec0fd997f5ef7614b0978 SHA1 a49b1b161093b43af2f1872b9772c78b52aad2fa SHA256 11f64fc89fc53c7f8f3a323d2f1009c8064eb676375b83b48070f9f84eae98dd
+MISC ChangeLog 8714 RMD160 704accc3954c201f4895ccfeab6ef4a62b22c2fe SHA1 dc47006d12cdbac7d304e273fef35ea10557d4eb SHA256 56e9b516a8f1bb86daa5512a553a712a546a8dc3002fb11918a30e988c1dfca1
+MISC metadata.xml 301 RMD160 010d22a5d88b8d2cd8a9c369fb92fb2a49658fa9 SHA1 1bcc1537dc4b498e06b02ff51e46ec9b8d34292d SHA256 051132afb420b1381f42d67a58b894696124a93bf88dbf9023459a3a6be4d84d
