@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer><email>hanno@gentoo.org</email></maintainer>
+	<herd>no-herd</herd>
+	<maintainer><email>hanno@gentoo.org</email></maintainer>
+	<use>
+		<flag name="gucharmap">Enable gucharmap dictionary plugin</flag>
+	</use>
 </pkgmetadata>
