@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/bluefish
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.67 2010/01/22 23:57:50 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/bluefish/ChangeLog,v 1.68 2010/01/25 22:30:26 billie Exp $
+
+*bluefish-2.0.0_rc2 (25 Jan 2010)
+
+  25 Jan 2010; Daniel Pielmeier <billie@gentoo.org>
+  +bluefish-2.0.0_rc2.ebuild, metadata.xml:
+  Version bump.
 
 *bluefish-2.0.0_rc1 (22 Jan 2010)
 
